# hammerfin

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
docs/: conf.py  index.rst  requirements.txt
docs/source/: conf.py  index.rst
hammerfin/dtypes/: __init__.py  _currency.py  _custom_dtype.py  _fin_dtype.py  currency_dtype.py
hammerfin/processing/: __init__.py  _one_hot_encoding.py  _scaling.py
hammerfin/table/: __init__.py  _financial_methods.py  _table.py
hammerfin/utils/: pandas_loader.py
tests/: test_import.py
