[tool.poetry]
name = "hammerfin"
version = "0.1.0"
description = "ProjectDescription"
authors = ["Thomas Kientz <thomas@kientz.net>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.3"
pandas = "^2.0.1"
sphinx = "^7.0.1"
sphinxawesome-theme = "^4.1.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.2"
pytest = "^7.3.1"
ruff = "^0.0.269"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 120
fix = true
ignore = ["D100", "D104", "D205", "D200"]

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.ruff.per-file-ignores]
"**/__init__.py" = ["F401"]

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120
disable = """
    too-many-arguments,
    not-callable,
    missing-module-docstring,
    import-error,
    too-few-public-methods,
"""
good-names = "i,j,k,x,y,z,ex,Run,_,e,_E"

[tool.pylint.MASTER]
ignore-paths = [
    "docs",
    "tests",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
